--- a/index.html
+++ b/index.html
@@ -1,106 +1,97 @@
 <!doctype html>
 <html lang="es">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Oporto – Descubre la ciudad</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Oporto</title>
 
-    <!-- Tipografías -->
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
-
-    <!-- CSS -->
-    <link rel="stylesheet" href="css/style.css" />
-
-    <!-- jQuery -->
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 </head>
 
 <body>
 
-    <!-- NAVBAR -->
-    <header class="navbar">
-        <div class="navbar-container">
-            <a href="index.html" class="logo">Oporto</a>
+    <!-- HEADER -->
+    <header id="header">
+        <div id="header-inner">
 
-            <nav class="nav-links">
+            <a id="logo" href="index.html">Oporto</a>
+
+            <nav id="nav-desktop">
                 <a href="index.html">Inicio</a>
                 <a href="que-ver.html">Qué ver</a>
                 <a href="clima.html">Clima</a>
             </nav>
 
-            <div class="hamburger">
+            <button id="nav-toggle" aria-label="Abrir menú">
                 <span></span><span></span><span></span>
-            </div>
+            </button>
+
         </div>
 
-        <!-- Menú móvil -->
-        <div class="mobile-menu">
+        <!-- menú móvil -->
+        <nav id="nav-mobile">
             <a href="index.html">Inicio</a>
             <a href="que-ver.html">Qué ver</a>
             <a href="clima.html">Clima</a>
-        </div>
+        </nav>
     </header>
 
     <!-- HERO -->
-    <section class="hero">
-        <div class="hero-overlay"></div>
-        <div class="hero-content">
+    <section id="hero">
+        <div id="hero-overlay"></div>
+        <div id="hero-content">
             <h1>Descubre Oporto</h1>
-            <p>Una ciudad llena de historia, luz y tradición a orillas del Duero.</p>
-            <a href="que-ver.html" class="btn-hero">Explorar</a>
+            <p>Una ciudad histórica a orillas del Duero.</p>
+            <a href="que-ver.html" class="btn">Explorar</a>
         </div>
     </section>
 
     <!-- INTRO -->
-    <section class="intro">
-        <div class="container">
+    <section id="intro">
+        <div class="section-inner">
             <h2>Bienvenido a Oporto</h2>
             <p>
-                Oporto es una de las ciudades más hermosas de Europa. Su casco antiguo,
-                sus azulejos, su gastronomía y su famoso puente Don Luis I hacen de esta
-                ciudad un destino imprescindible.
+                Oporto combina tradición, luz y una riqueza cultural única.
+                Sus calles empedradas, sus azulejos azules y el puente Don Luis I
+                convierten la ciudad en un destino imprescindible.
             </p>
         </div>
     </section>
 
     <!-- DESTACADOS -->
-    <section class="destacados">
-        <div class="container">
+    <section id="destacados">
+        <div class="section-inner">
             <h2>Lugares destacados</h2>
 
-            <div class="cards">
-
-                <div class="card">
-                    <img src="img/ribeira.jpg" alt="Ribeira de Oporto" />
+            <div class="grid">
+                <article class="card">
+                    <img src="img/ribeira.jpg" alt="Ribeira de Oporto">
                     <h3>Ribeira</h3>
-                    <p>El barrio más emblemático de Oporto, lleno de color y vida.</p>
-                </div>
+                    <p>El barrio más emblemático de la ciudad.</p>
+                </article>
 
-                <div class="card">
-                    <img src="img/puente.jpg" alt="Puente Don Luis I" />
+                <article class="card">
+                    <img src="img/puente.jpg" alt="Puente Don Luis I">
                     <h3>Puente Don Luis I</h3>
-                    <p>Una de las estructuras más reconocibles de Portugal.</p>
-                </div>
+                    <p>El icono arquitectónico de Oporto.</p>
+                </article>
 
-                <div class="card">
-                    <img src="img/lello.jpg" alt="Librería Lello" />
+                <article class="card">
+                    <img src="img/lello.jpg" alt="Librería Lello">
                     <h3>Librería Lello</h3>
-                    <p>Una de las librerías más bonitas del mundo.</p>
-                </div>
-
+                    <p>Una de las librerías más bellas del mundo.</p>
+                </article>
             </div>
         </div>
     </section>
 
     <!-- FOOTER -->
-    <footer class="footer">
-        <div class="container">
-            <p>© 2025 Oporto · Proyecto académico</p>
-        </div>
+    <footer id="footer">
+        <p>© 2025 Oporto · Proyecto académico</p>
     </footer>
 
-    <!-- JS -->
-    <script src="js/main.js"></script>
-
+    <script src="js/script.js"></script>
 </body>
 </html>
