--- a/index.html
+++ b/index.html
@@ -14,29 +14,27 @@
 
     <!-- HEADER -->
     <header id="header">
-        <div id="header-inner">
-
-            <a id="logo" href="index.html">Oporto</a>
-
-            <nav id="nav-desktop">
-                <a href="index.html">Inicio</a>
-                <a href="que-ver.html">Qué ver</a>
-                <a href="clima.html">Clima</a>
-            </nav>
-
-            <button id="nav-toggle" aria-label="Abrir menú">
-                <span></span><span></span><span></span>
-            </button>
-
+        <div class="logo">
+            <a href="index.html">Oporto</a>
         </div>
 
-        <!-- menú móvil -->
-        <nav id="nav-mobile">
-            <a href="index.html">Inicio</a>
-            <a href="que-ver.html">Qué ver</a>
-            <a href="clima.html">Clima</a>
+        <!-- Botón hamburguesa -->
+        <div class="bars">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+        </div>
+
+        <!-- Menú -->
+        <nav class="nav_bar">
+            <ul>
+                <li><a href="index.html" class="active">Inicio</a></li>
+                <li><a href="que-ver.html">Qué ver</a></li>
+                <li><a href="clima.html">Clima</a></li>
+            </ul>
         </nav>
     </header>
+
 
     <!-- HERO -->
     <section id="hero">
