--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         </div>
 
         <!-- Botón hamburguesa -->
-        <div class="bars">
-            <div class="line"></div>
-            <div class="line"></div>
-            <div class="line"></div>
-        </div>
+        <button class="bars">
+            <span class="line"></span>
+            <span class="line"></span>
+            <span class="line"></span>
+        </button>
 
         <!-- Menú -->
         <nav class="nav_bar">
@@ -34,6 +34,7 @@
             </ul>
         </nav>
     </header>
+
 
 
     <!-- HERO -->
