--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <!-- HEADER -->
-    <header id="header">
+    <header>
         <div class="logo">
             <a href="index.html">Oporto</a>
         </div>
@@ -28,9 +28,8 @@
         <!-- Menú -->
         <nav class="nav_bar">
             <ul>
-                <li><a href="index.html" class="active">Inicio</a></li>
-                <li><a href="que-ver.html">Qué ver</a></li>
-                <li><a href="clima.html">Clima</a></li>
+                <li><a href="whattodo.html">Qué ver</a></li>
+                <li><a href="weather.html">Clima</a></li>
             </ul>
         </nav>
     </header>
@@ -66,19 +65,19 @@
 
             <div class="grid">
                 <article class="card">
-                    <img src="img/ribeira.jpg" alt="Ribeira de Oporto">
+                    <img src="https://picsum.photos/seed/picsum/200/300" alt="Ribeira de Oporto">
                     <h3>Ribeira</h3>
                     <p>El barrio más emblemático de la ciudad.</p>
                 </article>
 
                 <article class="card">
-                    <img src="img/puente.jpg" alt="Puente Don Luis I">
+                    <img src="https://picsum.photos/seed/picsum/200/300" alt="Puente Don Luis I">
                     <h3>Puente Don Luis I</h3>
                     <p>El icono arquitectónico de Oporto.</p>
                 </article>
 
                 <article class="card">
-                    <img src="img/lello.jpg" alt="Librería Lello">
+                    <img src="https://picsum.photos/seed/picsum/200/300" alt="Librería Lello">
                     <h3>Librería Lello</h3>
                     <p>Una de las librerías más bellas del mundo.</p>
                 </article>
