--- a/index.html
+++ b/index.html
@@ -64,22 +64,56 @@
 
             <div class="grid">
                 <article class="card">
-                    <img src="https://picsum.photos/seed/picsum/200/300" alt="Ribeira de Oporto">
+                    <img src="img/all/lugar1.jpg" alt="Ribeira de Oporto">
                     <h3>Ribeira</h3>
                     <p>El barrio más emblemático de la ciudad.</p>
                 </article>
 
                 <article class="card">
-                    <img src="https://picsum.photos/seed/picsum/200/300" alt="Puente Don Luis I">
+                    <img src="img/all/lugar2.jpg" alt="Puente Don Luis I">
                     <h3>Puente Don Luis I</h3>
                     <p>El icono arquitectónico de Oporto.</p>
                 </article>
 
                 <article class="card">
-                    <img src="https://picsum.photos/seed/picsum/200/300" alt="Librería Lello">
+                    <img src="img/all/lugar3.jpg" alt="Librería Lello">
                     <h3>Librería Lello</h3>
                     <p>Una de las librerías más bellas del mundo.</p>
                 </article>
+            </div>
+        </div>
+    </section>
+
+    <section id="tips">
+        <div class="section-inner">
+            <h2>Consejos para tu visita</h2>
+
+            <div class="tips-grid">
+
+                <article class="tip-card">
+                    <div class="tip-icon">🚌</div>
+                    <h3>Cómo moverte</h3>
+                    <p>El tranvía y el metro son las mejores opciones para recorrer Oporto sin complicaciones.</p>
+                </article>
+
+                <article class="tip-card">
+                    <div class="tip-icon">🌅</div>
+                    <h3>Atardecer perfecto</h3>
+                    <p>Sube al Miradouro da Vitória o cruza a Gaia para ver el puente iluminado.</p>
+                </article>
+
+                <article class="tip-card">
+                    <div class="tip-icon">🍽️</div>
+                    <h3>Dónde comer bien</h3>
+                    <p>Busca restaurantes locales fuera de la Ribeira para precios mejores y comida auténtica.</p>
+                </article>
+
+                <article class="tip-card">
+                    <div class="tip-icon">⚠️</div>
+                    <h3>Qué evitar</h3>
+                    <p>Evita taxis caros en zonas turísticas; usa apps o transporte público.</p>
+                </article>
+
             </div>
         </div>
     </section>
