--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div id="hero-content">
             <h1>Descubre Oporto</h1>
             <p>Una ciudad histórica a orillas del Duero.</p>
-            <a href="que-ver.html" class="btn">Explorar</a>
+            <a href="whattodo.html" class="btn">Explorar</a>
         </div>
     </section>
 
