--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
         <div id="hero-content">
             <h1>Descubre Oporto</h1>
             <p>Una ciudad histórica a orillas del Duero.</p>
-            <a href="whattodo.html" class="btn">Explorar</a>
+            <a href="whattodo.html" class="btn reveal">Explorar</a>
         </div>
     </section>
 
     <!-- INTRO -->
     <section id="intro">
         <div class="section-inner">
-            <h2>Bienvenido a Oporto</h2>
-            <p>
+            <h2 class="reveal">Bienvenido a Oporto</h2>
+            <p class="reveal">
                 Oporto combina tradición, luz y una riqueza cultural única.
                 Sus calles empedradas, sus azulejos azules y el puente Don Luis I
                 convierten la ciudad en un destino imprescindible.
@@ -62,23 +62,23 @@
 
     <!-- DESTACADOS -->
     <section id="destacados">
-        <div class="section-inner">
+        <div class="section-inner reveal">
             <h2>Lugares destacados</h2>
 
             <div class="grid">
-                <article class="card">
+                <article class="card reveal">
                     <img src="img/all/lugar1.jpg" alt="Ribeira de Oporto">
                     <h3>Ribeira</h3>
                     <p>El barrio más emblemático de la ciudad.</p>
                 </article>
 
-                <article class="card">
+                <article class="card reveal">
                     <img src="img/all/lugar2.jpg" alt="Puente Don Luis I">
                     <h3>Puente Don Luis I</h3>
                     <p>El icono arquitectónico de Oporto.</p>
                 </article>
 
-                <article class="card">
+                <article class="card reveal">
                     <img src="img/all/lugar3.jpg" alt="Librería Lello">
                     <h3>Librería Lello</h3>
                     <p>Una de las librerías más bellas del mundo.</p>
@@ -89,7 +89,7 @@
 
     <section id="tips">
         <div class="section-inner">
-            <h2>Consejos para tu visita</h2>
+            <h2 class="reveal">Consejos para tu visita</h2>
         </div>
 
         <!-- Carrusel full-width -->
@@ -97,7 +97,7 @@
 
             <button class="tips-arrow tips-prev">‹</button>
 
-            <div class="tips-carousel-wrapper">
+            <div class="tips-carousel-wrapper reveal">
                 <div class="tips-carousel">
 
                     <!-- 10 tarjetas -->
@@ -126,7 +126,7 @@
                     </div>
 
                     <div class="tip-slide">
-                        <div class="tip-card">
+                        <div class="tip-card   ">
                             <div class="tip-icon">⚠️</div>
                             <h3>Evita taxis caros</h3>
                             <p>Usa apps de transporte o el metro para ahorrar dinero.</p>
@@ -184,11 +184,11 @@
                 </div>
             </div>
 
-            <button class="tips-arrow tips-next">›</button>
+            <button class="tips-arrow tips-next reveal">›</button>
         </div>
 
         <div class="section-inner">
-            <div class="tips-dots"></div>
+            <div class="tips-dots reveal"></div>
         </div>
 
     </section>
