--- a/weather.html
+++ b/weather.html
@@ -41,21 +41,21 @@
     <section id="weather-section">
         <div class="section-inner">
 
-            <h2>Clima en Oporto</h2>
+            <h2 class="reveal">Clima en Oporto</h2>
 
-            <div id="weather-current">
+            <div id="weather-current" class="reveal">
                 <h3 id="weather-city">—</h3>
                 <p id="weather-temp">—°C</p>
                 <p id="weather-desc">—</p>
             </div>
 
-            <h3 style="margin-top:40px;">Pronóstico próximos días</h3>
+            <h3 style="margin-top:40px;" class="reveal">Pronóstico próximos días</h3>
 
-            <div id="forecast-cards"></div>
+            <div id="forecast-cards" class="reveal"></div>
 
-            <div id="chart-legend" class="chart-legend"></div>
+            <div id="chart-legend" class="chart-legend reveal"></div>
 
-            <canvas id="weatherChart"></canvas>
+            <canvas id="weatherChart" class="reveal"></canvas>
 
         </div>
     </section>
