--- a/whattodo.html
+++ b/whattodo.html
@@ -37,85 +37,85 @@
     </header>
 
     <section id="que-ver" class="gallery-section">
-        <h2 class="gallery-title">Qué ver</h2>
+        <h2 class="gallery-title reveal">Qué ver</h2>
 
         <div class="gallery-grid">
 
             <!-- Fila 1 grande -->
-            <article class="card w2 h2" data-title="Mirador del Río" data-price="Gratis">
+            <article class="card w2 h2 reveal" data-title="Mirador del Río" data-price="Gratis">
                 <img src="https://images.unsplash.com/photo-1590357192476-56b19d9ad743?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
                 <div class="card-info"><div class="card-text"><h3>Mirador del Río</h3><p class="price">Gratis</p></div></div>
             </article>
 
-            <article class="card w1 h2" data-title="Museo Local" data-price="8€">
+            <article class="card w1 h2 reveal" data-title="Museo Local" data-price="8€">
                 <img src="https://images.unsplash.com/photo-1734894465377-15974b1494b3?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8bXVzZW8lMjBwb3J0b3xlbnwwfHwwfHx8MA%3D%3D" alt="">
                 <div class="card-info"><div class="card-text"><h3>Museo Local</h3><p class="price">8€</p></div></div>
             </article>
 
-            <article class="card w1 h1" data-title="Plaza Central" data-price="">
+            <article class="card w1 h1 reveal" data-title="Plaza Central" data-price="">
                 <img src="https://images.unsplash.com/photo-1660907376101-5f8e52a858ee?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
                 <div class="card-info"><div class="card-text"><h3>Plaza Central</h3></div></div>
             </article>
 
-            <article class="card w2 h1" data-title="Jardín Botánico" data-price="5€">
+            <article class="card w2 h1 reveal" data-title="Jardín Botánico" data-price="5€">
                 <img src="https://images.unsplash.com/photo-1762294486679-d5067439c19f?q=80&w=1171&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
                 <div class="card-info"><div class="card-text"><h3>Jardín Botánico</h3><p class="price">5€</p></div></div>
             </article>
 
             <!-- Fila 2 -->
-            <article class="card w1 h1" data-title="Ruta Street Art" data-price="Gratis">
+            <article class="card w1 h1 reveal" data-title="Ruta Street Art" data-price="Gratis">
                 <img src="https://images.unsplash.com/photo-1763403479530-c81ca64aab61?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTV8fHN0cmVldCUyMGFydCUyMHBvcnRvfGVufDB8fDB8fHww" alt="">
                 <div class="card-info"><div class="card-text"><h3>Ruta Street Art</h3><p class="price">Gratis</p></div></div>
             </article>
 
-            <article class="card w2 h2" data-title="Castillo Antiguo" data-price="12€">
+            <article class="card w2 h2 reveal" data-title="Castillo Antiguo" data-price="12€">
                 <img src="https://images.unsplash.com/photo-1617633372039-39f5aa343609?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8Q0FTVExFJTIwcG9ydG98ZW58MHx8MHx8fDA%3D" alt="">
                 <div class="card-info"><div class="card-text"><h3>Castillo Antiguo</h3><p class="price">12€</p></div></div>
             </article>
 
-            <article class="card w1 h1" data-title="Acuario" data-price="15€">
+            <article class="card w1 h1 reveal" data-title="Acuario" data-price="15€">
                 <img src="https://images.unsplash.com/photo-1621458863694-c53be68f5698?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8YWN1YXJpdW0lMjBwb3J0b3xlbnwwfHwwfHx8MA%3D%3D" alt="">
                 <div class="card-info"><div class="card-text"><h3>Acuario</h3><p class="price">15€</p></div></div>
             </article>
 
-            <article class="card w2 h1" data-title="Playas del Norte" data-price="">
+            <article class="card w2 h1 reveal" data-title="Playas del Norte" data-price="">
                 <img src="https://images.unsplash.com/photo-1721811601346-bad95b0bd0ec?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cGxheWFzJTIwcG9ydG98ZW58MHx8MHx8fDA%3D" alt="">
                 <div class="card-info"><div class="card-text"><h3>Playas del Norte</h3></div></div>
             </article>
 
             <!-- Fila 3 -->
-            <article class="card w1 h2" data-title="Centro Histórico" data-price="Gratis">
+            <article class="card w1 h2 reveal" data-title="Centro Histórico" data-price="Gratis">
                 <img src="https://images.unsplash.com/photo-1560754599-c233405055e2?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8Y2VudGVyJTIwcG9ydG98ZW58MHx8MHx8fDA%3D" alt="">
                 <div class="card-info"><div class="card-text"><h3>Centro Histórico</h3><p class="price">Gratis</p></div></div>
             </article>
 
-            <article class="card w2 h1" data-title="Mercado Artesanal" data-price="">
+            <article class="card w2 h1 reveal" data-title="Mercado Artesanal" data-price="">
                 <img src="https://images.unsplash.com/photo-1675266410976-c9606a12731e?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
                 <div class="card-info"><div class="card-text"><h3>Mercado Artesanal</h3></div></div>
             </article>
 
-            <article class="card w1 h1" data-title="Mirador Sur" data-price="">
+            <article class="card w1 h1 reveal" data-title="Mirador Sur" data-price="">
                 <img src="https://images.unsplash.com/photo-1717451062579-7ce3896dd1d3?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
                 <div class="card-info"><div class="card-text"><h3>Mirador Sur</h3></div></div>
             </article>
 
-            <article class="card w2 h2" data-title="Paseo del Río" data-price="3€">
+            <article class="card w2 h2 reveal" data-title="Paseo del Río" data-price="3€">
                 <img src="https://images.unsplash.com/photo-1595806595698-148989f6bec5?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjR8fHJpdmVyJTIwcG9ydG98ZW58MHx8MHx8fDA%3D" alt="">
                 <div class="card-info"><div class="card-text"><h3>Paseo del Río</h3><p class="price">3€</p></div></div>
             </article>
 
             <!-- Fila 4 -->
-            <article class="card w1 h1" data-title="Faro" data-price="">
+            <article class="card w1 h1 reveal" data-title="Faro" data-price="">
                 <img src="https://images.unsplash.com/photo-1653995850904-b1c23f17397b?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bGlnaHRob3VzZSUyMHBvcnRvfGVufDB8fDB8fHww" alt="">
                 <div class="card-info"><div class="card-text"><h3>Faro</h3></div></div>
             </article>
 
-            <article class="card w2 h1" data-title="Reserva Natural" data-price="7€">
+            <article class="card w2 h1 reveal" data-title="Reserva Natural" data-price="7€">
                 <img src="https://images.unsplash.com/photo-1678560483708-9b1bb038899d?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8bmF0dXJlJTIwcGFyayUyMHBvcnRvfGVufDB8fDB8fHww" alt="">
                 <div class="card-info"><div class="card-text"><h3>Reserva Natural</h3><p class="price">7€</p></div></div>
             </article>
 
-            <article class="card w1 h2" data-title="Cuevas" data-price="10€">
+            <article class="card w1 h2 reveal" data-title="Cuevas" data-price="10€">
                 <img src="https://images.unsplash.com/photo-1667320339843-29dd530ca038?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8Y2F2ZXMlMjBwb3J0b3xlbnwwfHwwfHx8MA%3D%3D" alt="">
                 <div class="card-info"><div class="card-text"><h3>Cuevas</h3><p class="price">10€</p></div></div>
             </article>
