--- a/whattodo.html
+++ b/whattodo.html
@@ -136,9 +136,41 @@
         </div>
         </section>
 
-    <!-- FOOTER -->
-    <footer id="footer">
-        <p>© 2025 Oporto · Proyecto académico</p>
+       <!-- FOOTER -->
+    <footer id="footer" class="reveal">
+        <div class="footer-inner">
+
+            <!-- Columna 1: Identidad -->
+            <div class="footer-col">
+                <h3>Oporto</h3>
+                <p>Guía visual y turística creada para un proyecto académico. Inspirada en la magia y cultura de la ciudad.</p>
+            </div>
+
+            <!-- Columna 2: Navegación -->
+            <div class="footer-col">
+                <h4>Navegación</h4>
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="whattodo.html">Qué ver</a></li>
+                    <li><a href="weather.html">Clima</a></li>
+                </ul>
+            </div>
+
+            <!-- Columna 4: Contacto -->
+            <div class="footer-col">
+                <h4>Contacto</h4>
+                <ul>
+                    <li><span>info@oporto.com</span></li>
+                    <li><span>+34 600 000 000</span></li>
+                </ul>
+            </div>
+
+        </div>
+
+        <!-- Línea inferior -->
+        <div class="footer-bottom">
+            <p>© 2025 Oporto · Proyecto académico</p>
+        </div>
     </footer>
 
     <script src="js/script.js"></script>
