--- a/weather.html
+++ b/weather.html
@@ -61,23 +61,26 @@
     </section>
 
 
-        <!-- FOOTER -->
-    <footer id="footer" class="reveal">
-        <div class="footer-inner">
+   <!-- FOOTER -->
+    <footer id="footer">
+        <div class="footer-container">
 
-            <!-- Columna 1: Identidad -->
+            <!-- Columna 1: Branding -->
             <div class="footer-col">
-                <h3>Oporto</h3>
-                <p>Guía visual y turística creada para un proyecto académico. Inspirada en la magia y cultura de la ciudad.</p>
+                <h3 class="footer-brand">Oporto</h3>
+                <p class="footer-desc">
+                    Proyecto web desarrollado con fines educativos.  
+                    Información y contenido demostrativo.
+                </p>
             </div>
 
             <!-- Columna 2: Navegación -->
             <div class="footer-col">
-                <h4>Navegación</h4>
+                <h4>Secciones</h4>
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="whattodo.html">Qué ver</a></li>
-                    <li><a href="weather.html">Clima</a></li>
+                    <li><a href="#">Servicios</a></li>
+                    <li><a href="#">Contacto</a></li>
                 </ul>
             </div>
 
@@ -85,8 +88,9 @@
             <div class="footer-col">
                 <h4>Recursos</h4>
                 <ul>
-                    <li><a href="#destacados">Lugares destacados</a></li>
-                    <li><a href="#tips">Consejos para tu visita</a></li>
+                    <li><a href="#">Preguntas frecuentes</a></li>
+                    <li><a href="#">Política de privacidad</a></li>
+                    <li><a href="#">Términos y condiciones</a></li>
                 </ul>
             </div>
 
@@ -94,16 +98,16 @@
             <div class="footer-col">
                 <h4>Contacto</h4>
                 <ul>
-                    <li><span>info@oporto.com</span></li>
-                    <li><span>+34 600 000 000</span></li>
+                    <li><span>portoturismo@web.com</span></li>
+                    <li><span>+00 000 000 000</span></li>
+                    <li><span>Oporto, Portugal</span></li>
                 </ul>
             </div>
 
         </div>
 
-        <!-- Línea inferior -->
         <div class="footer-bottom">
-            <p>© 2025 Oporto · Proyecto académico</p>
+            <p>© <span id="year"></span> · Todos los derechos reservados</p>
         </div>
     </footer>
 
