--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@
     <!-- HERO -->
     <section id="hero">
         <div id="hero-overlay"></div>
-        <div id="hero-content">
+        <div id="hero-content" class="reveal">
             <h1>Descubre Oporto</h1>
             <p>Una ciudad histórica a orillas del Duero.</p>
-            <a href="whattodo.html" class="btn reveal">Explorar</a>
+            <a href="whattodo.html" class="btn">Explorar</a>
         </div>
     </section>
 
     <!-- INTRO -->
     <section id="intro">
-        <div class="section-inner">
-            <h2 class="reveal">Bienvenido a Oporto</h2>
-            <p class="reveal">
+        <div class="section-inner reveal">
+            <h2>Bienvenido a Oporto</h2>
+            <p >
                 Oporto combina tradición, luz y una riqueza cultural única.
                 Sus calles empedradas, sus azulejos azules y el puente Don Luis I
                 convierten la ciudad en un destino imprescindible.
@@ -61,24 +61,24 @@
     </section>
 
     <!-- DESTACADOS -->
-    <section id="destacados">
+    <section id="destacadosl">
         <div class="section-inner reveal">
             <h2>Lugares destacados</h2>
 
             <div class="grid">
-                <article class="card reveal">
+                <article class="card">
                     <img src="img/all/lugar1.jpg" alt="Ribeira de Oporto">
                     <h3>Ribeira</h3>
                     <p>El barrio más emblemático de la ciudad.</p>
                 </article>
 
-                <article class="card reveal">
+                <article class="card">
                     <img src="img/all/lugar2.jpg" alt="Puente Don Luis I">
                     <h3>Puente Don Luis I</h3>
                     <p>El icono arquitectónico de Oporto.</p>
                 </article>
 
-                <article class="card reveal">
+                <article class="card">
                     <img src="img/all/lugar3.jpg" alt="Librería Lello">
                     <h3>Librería Lello</h3>
                     <p>Una de las librerías más bellas del mundo.</p>
@@ -87,9 +87,9 @@
         </div>
     </section>
 
-    <section id="tips">
+    <section id="tips"  class="reveal">
         <div class="section-inner">
-            <h2 class="reveal">Consejos para tu visita</h2>
+            <h2>Consejos para tu visita</h2>
         </div>
 
         <!-- Carrusel full-width -->
@@ -97,7 +97,7 @@
 
             <button class="tips-arrow tips-prev">‹</button>
 
-            <div class="tips-carousel-wrapper reveal">
+            <div class="tips-carousel-wrapper">
                 <div class="tips-carousel">
 
                     <!-- 10 tarjetas -->
@@ -184,11 +184,11 @@
                 </div>
             </div>
 
-            <button class="tips-arrow tips-next reveal">›</button>
+            <button class="tips-arrow tips-next">›</button>
         </div>
 
         <div class="section-inner">
-            <div class="tips-dots reveal"></div>
+            <div class="tips-dots"></div>
         </div>
 
     </section>
