--- a/weather.html
+++ b/weather.html
@@ -79,8 +79,8 @@
                 <h4>Secciones</h4>
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="#">Servicios</a></li>
-                    <li><a href="#">Contacto</a></li>
+                    <li><a>Servicios</a></li>
+                    <li><a>Contacto</a></li>
                 </ul>
             </div>
 
@@ -88,9 +88,9 @@
             <div class="footer-col">
                 <h4>Recursos</h4>
                 <ul>
-                    <li><a href="#">Preguntas frecuentes</a></li>
-                    <li><a href="#">Política de privacidad</a></li>
-                    <li><a href="#">Términos y condiciones</a></li>
+                    <li><a>Preguntas frecuentes</a></li>
+                    <li><a>Política de privacidad</a></li>
+                    <li><a>Términos y condiciones</a></li>
                 </ul>
             </div>
 
