--- a/whattodo.html
+++ b/whattodo.html
@@ -154,8 +154,8 @@
                 <h4>Secciones</h4>
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="#">Servicios</a></li>
-                    <li><a href="#">Contacto</a></li>
+                    <li><a>Servicios</a></li>
+                    <li><a>Contacto</a></li>
                 </ul>
             </div>
 
@@ -163,9 +163,9 @@
             <div class="footer-col">
                 <h4>Recursos</h4>
                 <ul>
-                    <li><a href="#">Preguntas frecuentes</a></li>
-                    <li><a href="#">Política de privacidad</a></li>
-                    <li><a href="#">Términos y condiciones</a></li>
+                    <li><a>Preguntas frecuentes</a></li>
+                    <li><a>Política de privacidad</a></li>
+                    <li><a>Términos y condiciones</a></li>
                 </ul>
             </div>
 
